--- a/app/src/main/res/layout-v21/fragment_find_stay_.xml
+++ b/app/src/main/res/layout-v21/fragment_find_stay_.xml
@@ -10,9 +10,11 @@
     <Button
         android:id="@+id/search_button"
         android:layout_width="match_parent"
-        android:layout_height="36dp"
+        android:layout_height="wrap_content"
         android:layout_margin="5dp"
         android:background="@drawable/search_button_bg"
+        android:drawableStart="?android:attr/actionModeWebSearchDrawable"
+        android:ellipsize="none"
         android:fadingEdge="horizontal"
         android:gravity="fill_vertical|start"
         android:paddingLeft="10dp"
