Fixed little bugs

--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -27,7 +27,7 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="310dp"
-        android:text="Add places"/>
+        android:text="Add Stay"/>
 
     <Button
         android:id="@+id/signOut"
