--- a/app/src/main/res/layout/addstaydialog.xml
+++ b/app/src/main/res/layout/addstaydialog.xml
@@ -77,4 +77,20 @@
         android:layout_marginLeft="115dp"
         app:srcCompat="@android:drawable/ic_menu_my_calendar" />
 
+    <TextView
+        android:id="@+id/cityView"
+        android:layout_width="wrap_content"
+        android:layout_height="30dp"
+        android:text="City :"
+        android:textSize="17dp"
+        android:layout_marginTop="240dp"
+        android:layout_marginLeft="70dp"/>
+
+    <EditText
+        android:id="@+id/editCity"
+        android:layout_width="220dp"
+        android:layout_height="45dp"
+        android:layout_marginTop="220dp"
+        android:layout_marginLeft="110dp"/>
+
 </RelativeLayout>
