--- a/app/src/main/res/layout/fragment_add_places.xml
+++ b/app/src/main/res/layout/fragment_add_places.xml
@@ -6,6 +6,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".AddStays">
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/add_stay_list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+    <TextView
+        android:id="@+id/noUseTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="1000dp"/>
+
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/addStayButton"
         android:layout_width="59dp"
