--- a/app/src/main/res/layout/stay_list_item.xml
+++ b/app/src/main/res/layout/stay_list_item.xml
@@ -30,18 +30,23 @@
                 style="@android:style/Widget.DeviceDefault.Light.ImageButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignBottom="@+id/imageView"
-                android:layout_alignParentBottom="false"
-                android:layout_alignParentLeft="false"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentTop="false"
                 android:layout_alignWithParentIfMissing="false"
-                android:layout_margin="5dp"
-                android:background="@android:drawable/menuitem_background"
-                app:srcCompat="@android:drawable/ic_menu_call"
-                android:contentDescription="@string/todo"
+                android:layout_alignBottom="@+id/imageView"
                 android:layout_alignParentStart="false"
-                android:layout_alignParentEnd="true" />
+                android:layout_alignParentLeft="false"
+                android:layout_alignParentTop="false"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentBottom="false"
+                android:layout_marginStart="5dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginBottom="-43dp"
+                android:background="@android:drawable/menuitem_background"
+                android:contentDescription="@string/todo"
+                app:srcCompat="@android:drawable/ic_menu_call" />
 
             <TextView
                 android:id="@+id/textView_person"
@@ -49,7 +54,8 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/textView_stay"
                 android:text="@string/name_of_the_host"
-                android:textColor="@color/cardview_dark_background"
+                android:textStyle="bold"
+                android:textColor="@color/colorBottomNavigationNotification"
                 android:textSize="18sp" />
 
             <TextView
@@ -62,7 +68,7 @@
                 android:shadowColor="@color/cardview_dark_background"
                 android:text="@string/name_of_the_stay"
                 android:textAllCaps="false"
-                android:textColor="@color/cardview_light_background"
+                android:textColor="@color/colorBottomNavigationAccent"
                 android:textSize="24sp"
                 android:textStyle="bold" />
 
