--- a/app/src/main/res/layout/addstaydialog.xml
+++ b/app/src/main/res/layout/addstaydialog.xml
@@ -15,19 +15,35 @@
         android:text="Add Stay Details" />
 
     <TextView
+        android:id="@+id/stayNameView"
+        android:layout_width="wrap_content"
+        android:layout_height="45dp"
+        android:text="Stay Name :"
+        android:layout_marginTop="80dp"
+        android:layout_marginLeft="25dp"
+        android:textSize="17dp" />
+
+    <EditText
+        android:id="@+id/editStayName"
+        android:layout_width="220dp"
+        android:layout_height="45dp"
+        android:layout_marginTop="70dp"
+        android:layout_marginLeft="120dp"/>
+
+    <TextView
         android:id="@+id/hostNameView"
         android:layout_width="wrap_content"
         android:layout_height="45dp"
         android:text="Host Name :"
         android:textSize="17dp"
-        android:layout_marginTop="80dp"
-        android:layout_marginLeft="25dp"/>
+        android:layout_marginTop="125dp"
+        android:layout_marginLeft="20dp"/>
 
     <EditText
         android:id="@+id/editHostName"
         android:layout_width="220dp"
         android:layout_height="45dp"
-        android:layout_marginTop="70dp"
+        android:layout_marginTop="115dp"
         android:layout_marginLeft="120dp"/>
 
     <TextView
@@ -36,15 +52,15 @@
         android:layout_height="45dp"
         android:text="Place :"
         android:textSize="17dp"
-        android:layout_marginTop="130dp"
+        android:layout_marginTop="175dp"
         android:layout_marginLeft="60dp"/>
 
     <EditText
         android:id="@+id/editPlace"
         android:layout_width="220dp"
         android:layout_height="45dp"
-        android:layout_marginTop="120dp"
-        android:layout_marginLeft="125dp"/>
+        android:layout_marginTop="165dp"
+        android:layout_marginLeft="120dp"/>
 
     <TextView
         android:id="@+id/dateView"
@@ -52,29 +68,29 @@
         android:layout_height="30dp"
         android:textSize="17dp"
         android:text="Date :"
-        android:layout_marginTop="180dp"
+        android:layout_marginTop="225dp"
         android:layout_marginLeft="60dp"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="(dd-mm-yyyy)"
-        android:layout_marginTop="200dp"
+        android:layout_marginTop="245dp"
         android:layout_marginLeft="35dp"/>
 
     <EditText
         android:id="@+id/editDate"
         android:layout_width="150dp"
         android:layout_height="45dp"
-        android:layout_marginTop="165dp"
+        android:layout_marginTop="210dp"
         android:layout_marginLeft="160dp"/>
 
     <ImageButton
         android:id="@+id/calendarImageButton"
         android:layout_width="45dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="170dp"
-        android:layout_marginLeft="115dp"
+        android:layout_marginTop="215dp"
+        android:layout_marginLeft="119dp"
         app:srcCompat="@android:drawable/ic_menu_my_calendar" />
 
     <TextView
@@ -83,14 +99,14 @@
         android:layout_height="30dp"
         android:text="City :"
         android:textSize="17dp"
-        android:layout_marginTop="240dp"
+        android:layout_marginTop="285dp"
         android:layout_marginLeft="70dp"/>
 
     <EditText
         android:id="@+id/editCity"
         android:layout_width="220dp"
         android:layout_height="45dp"
-        android:layout_marginTop="220dp"
+        android:layout_marginTop="270dp"
         android:layout_marginLeft="110dp"/>
 
 </RelativeLayout>
