--- a/app/src/main/res/layout/fragment_find_stay_.xml
+++ b/app/src/main/res/layout/fragment_find_stay_.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    >
+    android:orientation="vertical">
 
     <Button
         android:id="@+id/search_button"
@@ -25,9 +24,5 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/stay_list"
         android:layout_width="match_parent"
-<<<<<<< HEAD
         android:layout_height="wrap_content" />
-=======
-        android:layout_height="match_parent" />
->>>>>>> 70238b35ae8d025948c4beb1ad984543d914e42f
 </LinearLayout>
