--- a/app/src/main/res/layout/fragment_login_fragment.xml
+++ b/app/src/main/res/layout/fragment_login_fragment.xml
@@ -13,14 +13,15 @@
         android:layout_marginTop="123dp"
         android:text="LOGIN"
         android:textColor="@android:color/white"
-        android:textSize="25dp" />
+        android:textSize="25dp"
+        android:textStyle="bold" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="40dp"
         android:layout_marginLeft="21dp"
         android:layout_marginTop="202dp"
-        android:text="email:"
+        android:text="Email"
         android:textColor="@android:color/white"
         android:textSize="18dp" />
 
@@ -37,7 +38,7 @@
         android:layout_height="40dp"
         android:layout_marginLeft="21dp"
         android:layout_marginTop="262dp"
-        android:text="password:"
+        android:text="Password"
         android:textColor="@android:color/white"
         android:textSize="18dp" />
 
