--- a/app/src/main/res/layout/fragment_stay_item_detail.xml
+++ b/app/src/main/res/layout/fragment_stay_item_detail.xml
@@ -1,133 +1,194 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".StayItemDetail">
 
-    <LinearLayout
+    <ScrollView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        >
 
-        <TextView
-            android:id="@+id/textView3"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="10dp"
-            android:includeFontPadding="true"
-            android:paddingLeft="40dp"
-            android:text="Details"
-            android:textStyle="bold" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/stayDetails"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="10dp"
-            android:includeFontPadding="true"
-            android:paddingLeft="40dp"
-            android:textStyle="bold" />
+                <android.support.v7.widget.CardView
+                    android:id="@+id/cardView1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp">
 
-        <TextView
-            android:id="@+id/textView9"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="10dp"
-            android:includeFontPadding="true"
-            android:paddingLeft="40dp"
-            android:text="Max. Number Of People"
-            android:textStyle="bold" />
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/maxStayPeople"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="10dp"
-            android:includeFontPadding="true"
-            android:paddingLeft="40dp"
-            android:textStyle="bold" />
+                        <TextView
+                            android:id="@+id/stayName"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="5dp"
+                            android:text="@string/textview"
+                            android:textColor="@color/colorPrimaryDark"
+                            android:textSize="24sp"
+                            android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/textView4"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="10dp"
-            android:includeFontPadding="true"
-            android:paddingLeft="40dp"
-            android:text="Interests"
-            android:textStyle="bold" />
+                        <TextView
+                            android:id="@+id/reviewText"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_above="@+id/stayImage"
+                            android:layout_margin="5dp"
+                            android:layout_toLeftOf="@+id/stayRatingBar"
+                            android:text="@string/textview"
+                            android:textSize="24sp"
+                            android:layout_toStartOf="@+id/stayRatingBar" />
 
-        <TextView
-            android:id="@+id/stayInterests"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="10dp"
-            android:includeFontPadding="true"
-            android:paddingLeft="40dp"
-            android:textStyle="bold" />
+                        <RatingBar
+                            android:id="@+id/stayRatingBar"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignRight="@+id/stayName"
+                            android:numStars="1"
+                            android:layout_alignEnd="@+id/stayName" />
 
-        <TextView
-            android:id="@+id/textView6"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="10dp"
-            android:includeFontPadding="true"
-            android:paddingLeft="40dp"
-            android:text="Things To Offer"
-            android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/stayOffer"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="10dp"
-            android:includeFontPadding="true"
-            android:paddingLeft="40dp"
-            android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/textView11"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="10dp"
-            android:includeFontPadding="true"
-            android:paddingLeft="40dp"
-            android:text="Reviews"
-            android:textStyle="bold" />
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/recycler_view"
-            android:layout_width="match_parent"
-            android:layout_height="250dp"
-            android:layout_marginBottom="7dp"
-            android:layout_marginLeft="23dp"
-            android:layout_marginRight="23dp"
-            android:layout_marginTop="10dp"
-            android:scrollbars="vertical" />
-        <Button
-            android:id="@+id/button4"
-            android:layout_width="match_parent"
-            android:layout_height="36dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
-            android:text="Request To Stay" />
-    </LinearLayout>
-</FrameLayout>
+                        <ImageView
+                            android:id="@+id/stayImage"
+                            android:layout_width="match_parent"
+                            android:layout_height="190dp"
+                            android:layout_below="@+id/stayName"
+                            android:layout_margin="5dp"
+                            app:srcCompat="@color/colorPrimary"
+                            android:contentDescription="@string/todo" />
+                    </RelativeLayout>
+
+                </android.support.v7.widget.CardView>
+
+                <android.support.v7.widget.CardView
+                    android:id="@+id/cardView2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:id="@+id/stayBy"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="5dp"
+                            android:text="@string/textview"
+                            android:textSize="18sp"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:id="@+id/stayDetail"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="5dp"
+                            android:text="@string/textview" />
+
+                        <TextView
+                            android:id="@+id/stayOffers"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="5dp"
+                            android:text="@string/textview"
+                            android:textSize="18sp" />
+                    </LinearLayout>
+
+                </android.support.v7.widget.CardView>
+
+                <android.support.v7.widget.CardView
+                    android:id="@+id/cardView3"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_margin="5dp" >
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+
+                        <TextView
+                            android:id="@+id/selectPeople"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="5dp"
+                            android:text="@string/travellers"
+                            android:textSize="18sp" />
+
+                        <ImageButton
+                            android:id="@+id/travellerAdd"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentRight="true"
+                            android:layout_alignRight="@+id/selectPeople"
+                            android:layout_margin="5dp"
+                            android:background="@android:color/background_light"
+                            android:foregroundGravity="right"
+                            app:srcCompat="@android:drawable/ic_input_add"
+                            android:contentDescription="@string/todo"
+                            android:layout_alignParentEnd="true"
+                            android:layout_alignEnd="@+id/selectPeople" />
+
+                        <TextView
+                            android:id="@+id/travelerNumber"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerHorizontal="false"
+                            android:layout_centerInParent="false"
+                            android:layout_centerVertical="false"
+                            android:layout_margin="5dp"
+                            android:layout_marginBottom="5dp"
+                            android:layout_marginTop="5dp"
+                            android:layout_toLeftOf="@+id/travellerAdd"
+                            android:layout_toStartOf="@+id/travellerAdd"
+                            android:text="@string/_1"
+                            android:textSize="18sp"
+                            android:textStyle="bold" />
+
+                        <ImageButton
+                            android:id="@+id/subTraveller"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="5dp"
+                            android:layout_toLeftOf="@+id/travelerNumber"
+                            android:background="@android:color/background_light"
+                            app:srcCompat="@android:drawable/ic_input_add"
+                            android:contentDescription="@string/todo"
+                            android:layout_toStartOf="@+id/travelerNumber" />
+
+                        <TextView
+                            android:id="@+id/date"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@+id/selectPeople"
+                            android:layout_margin="5dp"
+                            android:text="@string/select_date"
+                            android:textSize="18sp" />
+
+                    </RelativeLayout>
+
+                </android.support.v7.widget.CardView>
+
+                <Button
+                    android:id="@+id/requestStay"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="right"
+                    android:layout_margin="5dp"
+                    android:background="@color/colorPrimaryDark"
+                    android:paddingLeft="5dp"
+                    android:paddingRight="5dp"
+                    android:text="@string/request_stay"
+                    android:textColor="@android:color/background_light" />
+
+            </LinearLayout>
+
+    </ScrollView>
