--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3b7dd8</color>
-    <color name="colorPrimaryDark">#4a91f2</color>
-    <color name="colorAccent">#64a1f4</color>
+    <color name="colorPrimary">#1AE5BE</color>
+    <color name="colorPrimaryDark">#0635c9</color>
+    <color name="colorAccent">#D4E1F4</color>
 </resources>
