--- a/app/src/main/res/layout/fragment_stay_item_detail.xml
+++ b/app/src/main/res/layout/fragment_stay_item_detail.xml
@@ -53,8 +53,6 @@
                             android:numStars="1"
                             android:layout_alignEnd="@+id/stayName" />
 
-
-
                         <ImageView
                             android:id="@+id/stayImage"
                             android:layout_width="match_parent"
@@ -138,7 +136,7 @@
                             app:srcCompat="@android:drawable/ic_input_add" />
 
                         <TextView
-                            android:id="@+id/travelerNumber"
+                            android:id="@+id/travellerNumber"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_centerHorizontal="false"
@@ -154,12 +152,12 @@
                             android:textStyle="bold" />
 
                         <ImageButton
-                            android:id="@+id/subTraveller"
+                            android:id="@+id/travellerSub"
                             android:layout_width="20dp"
                             android:layout_height="20dp"
                             android:layout_margin="5dp"
-                            android:layout_toLeftOf="@+id/travelerNumber"
-                            android:layout_toStartOf="@+id/travelerNumber"
+                            android:layout_toLeftOf="@+id/travellerNumber"
+                            android:layout_toStartOf="@+id/travellerNumber"
                             android:background="@android:color/background_light"
                             android:contentDescription="@string/todo"
                             app:srcCompat="@android:drawable/button_onoff_indicator_on" />
@@ -173,12 +171,27 @@
                             android:text="@string/select_date"
                             android:textSize="18sp" />
 
+                        <ImageButton
+                            android:id="@+id/calendarImageButton"
+                            android:layout_width="30dp"
+                            android:layout_height="36dp"
+                            android:layout_marginLeft="100dp"
+                            android:layout_marginTop="35dp"
+                            app:srcCompat="@android:drawable/ic_menu_my_calendar" />
+
+                        <TextView
+                            android:id="@+id/dateShow"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="45dp"
+                            android:layout_marginLeft="150dp"/>
+
                     </RelativeLayout>
 
                 </android.support.v7.widget.CardView>
 
                 <Button
-                    android:id="@+id/requestStay"
+                    android:id="@+id/requestStayButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="right"
