--- a/app/src/main/res/layout/fragment_login_fragment.xml
+++ b/app/src/main/res/layout/fragment_login_fragment.xml
@@ -7,7 +7,7 @@
     tools:context=".Login_fragment">
 
     <TextView
-        android:layout_width="100dp"
+        android:layout_width="wrap_content"
         android:layout_height="40dp"
         android:layout_marginLeft="140dp"
         android:layout_marginTop="123dp"
