--- a/app/src/main/res/layout/requested_stay_list_item.xml
+++ b/app/src/main/res/layout/requested_stay_list_item.xml
@@ -48,6 +48,8 @@
         android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
         android:layout_marginEnd="90dp"
-        android:text="TextView" />
+        android:text="TextView"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="90dp" />
 
 </RelativeLayout>
