--- a/app/src/main/res/layout/requested_stay_list_item.xml
+++ b/app/src/main/res/layout/requested_stay_list_item.xml
@@ -14,11 +14,10 @@
 
     <TextView
         android:id="@+id/requested_stay_name"
-        android:layout_width="84dp"
-        android:layout_height="34dp"
-        android:layout_alignParentStart="true"
-        android:layout_centerVertical="true"
-        android:layout_marginStart="106dp"
+        android:layout_width="89dp"
+        android:layout_height="32dp"
+        android:layout_marginStart="94dp"
+        android:layout_marginTop="10dp"
         android:textSize="16dp"
         android:textStyle="bold"
         tools:ignore="RtlCompat" />
@@ -26,7 +25,8 @@
     <TextView
         android:id="@+id/requested_city"
         android:layout_width="76dp"
-        android:layout_height="58dp"
+        android:layout_height="32dp"
+        android:layout_marginTop="10dp"
         android:layout_alignStart="@+id/username"
         android:layout_below="@+id/review_rating"
         tools:ignore="RtlCompat" />
@@ -43,13 +43,10 @@
 
     <TextView
         android:id="@+id/status"
-        android:layout_width="wrap_content"
-        android:layout_height="46dp"
-        android:layout_alignParentEnd="true"
-        android:layout_centerVertical="true"
-        android:layout_marginEnd="90dp"
-        android:text="TextView"
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="90dp" />
+        android:layout_width="76dp"
+        android:layout_height="32dp"
+        android:layout_marginLeft="200dp"
+        android:layout_marginTop="10dp"
+        android:text="TextView" />
 
 </RelativeLayout>
