--- a/app/src/main/res/layout/travel_list_item.xml
+++ b/app/src/main/res/layout/travel_list_item.xml
@@ -28,12 +28,13 @@
                 android:id="@+id/travel_hostpic"
                 android:layout_width="130dp"
                 android:layout_height="130dp"
-                android:layout_alignParentStart="true"
                 android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
+                android:layout_marginLeft="10dp"
                 android:layout_marginStart="11dp"
-                android:layout_marginLeft="11dp"
-                android:layout_marginTop="9dp"
+                android:layout_marginTop="10dp"
+                android:scaleType="centerCrop"
                 tools:ignore="MissingConstraints"
                 tools:layout_editor_absoluteX="11dp"
                 tools:layout_editor_absoluteY="7dp"
@@ -41,139 +42,75 @@
 
             <TextView
                 android:id="@+id/travel_place"
-                android:layout_width="205dp"
-                android:layout_height="33dp"
-                android:layout_below="@+id/travel_hostpic"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
-                android:layout_marginTop="-130dp"
-                android:layout_marginEnd="27dp"
-                android:layout_marginRight="27dp"
-                android:text="TextView"
-                android:textSize="18sp"
-                tools:ignore="MissingConstraints"
-                tools:layout_editor_absoluteX="154dp"
-                tools:layout_editor_absoluteY="7dp" />
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_marginLeft="150dp"
+                android:layout_marginTop="10dp"
+                android:text="PLACE"
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="24sp"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/travel_details"
-                android:layout_width="205dp"
-                android:layout_height="33dp"
-                android:layout_alignStart="@+id/travel_place"
-                android:layout_alignEnd="@+id/travel_goingno"
-                android:layout_alignRight="@+id/travel_goingno"
-                android:layout_alignParentTop="true"
-                android:layout_marginStart="0dp"
-                android:layout_marginTop="43dp"
-                android:layout_marginEnd="4dp"
-                android:layout_marginRight="4dp"
-                android:text="TextView"
-                android:textSize="16sp"
-                tools:ignore="MissingConstraints,RtlCompat"
-                tools:layout_editor_absoluteX="154dp"
-                tools:layout_editor_absoluteY="40dp" />
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="150dp"
+                android:layout_marginTop="50dp"
+                android:text="Details"
+                android:textSize="16sp" />
 
             <TextView
                 android:id="@+id/travel_host"
                 android:layout_width="187dp"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/travel_hostpic"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentLeft="true"
-                android:layout_marginStart="3dp"
-                android:layout_marginLeft="3dp"
-                android:layout_marginTop="5dp"
-                android:text="TextView"
-                android:textAllCaps="true"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                tools:ignore="MissingConstraints"
-                tools:layout_editor_absoluteX="11dp"
-                tools:layout_editor_absoluteY="144dp" />
+                android:layout_alignParentBottom="true"
+                android:layout_margin="10dp"
+                android:text="HOST"
+                android:textSize="18sp" />
 
             <ImageButton
                 android:id="@+id/travel_button_interested"
-                android:layout_width="49dp"
-                android:layout_height="42dp"
-                android:layout_alignBottom="@+id/travel_button_willjoin"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
-                android:layout_marginEnd="78dp"
-                android:layout_marginRight="78dp"
-                android:layout_marginBottom="1dp"
-                app:srcCompat="@drawable/outline_account_box_black_48dp"
-                tools:layout_editor_absoluteX="154dp"
-                tools:layout_editor_absoluteY="82dp" />
-
-            <TextView
-                android:id="@+id/travel_interested1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_above="@+id/travel_host"
-                android:layout_alignStart="@+id/travel_place"
-                android:layout_alignLeft="@+id/travel_place"
-                android:layout_marginStart="-1dp"
-                android:layout_marginLeft="-1dp"
-                android:layout_marginBottom="-7dp"
-                android:text="Interested"
-                tools:layout_editor_absoluteX="146dp"
-                tools:layout_editor_absoluteY="125dp" />
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginLeft="150dp"
+                android:layout_marginTop="100dp"
+                android:background="@drawable/ic_notifications_black_24dp" />
 
             <ImageButton
                 android:id="@+id/travel_button_willjoin"
-                android:layout_width="48dp"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/travel_details"
-                android:layout_alignStart="@+id/travel_place"
-                android:layout_alignLeft="@+id/travel_place"
-                android:layout_marginStart="6dp"
-                android:layout_marginLeft="6dp"
-                android:layout_marginTop="5dp"
-                android:layout_marginEnd="81dp"
-                android:layout_marginRight="81dp"
-                android:layout_toStartOf="@+id/travel_goingno"
-                android:layout_toLeftOf="@+id/travel_goingno"
-                app:srcCompat="@drawable/ic_home_black_24dp"
-                tools:layout_editor_absoluteX="233dp"
-                tools:layout_editor_absoluteY="79dp" />
-
-            <TextView
-                android:id="@+id/travel_willjoin"
-                android:layout_width="wrap_content"
-                android:layout_height="19dp"
-                android:layout_below="@+id/travel_button_interested"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
-                android:layout_marginTop="3dp"
-                android:layout_marginEnd="72dp"
-                android:layout_marginRight="72dp"
-                android:text="Will Join"
-                tools:layout_editor_absoluteX="233dp"
-                tools:layout_editor_absoluteY="125dp" />
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginLeft="70dp"
+                android:layout_marginTop="100dp"
+                android:layout_toRightOf="@+id/travel_button_interested"
+                android:background="@drawable/icons8_students_100" />
 
             <TextView
                 android:id="@+id/travel_interested"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentBottom="true"
-                android:layout_marginStart="174dp"
-                android:layout_marginLeft="174dp"
-                android:layout_marginBottom="31dp"
-                android:text="151" />
+
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="100dp"
+                android:layout_toRightOf="@+id/travel_button_interested"
+                android:text="151"
+                android:textColor="@color/colorAccent"
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/travel_goingno"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentBottom="true"
-                android:layout_marginEnd="85dp"
-                android:layout_marginRight="85dp"
-                android:layout_marginBottom="33dp"
-                android:text="111" />
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="100dp"
+                android:layout_toRightOf="@+id/travel_button_willjoin"
+                android:text="111"
+                android:textColor="@color/colorAccent"
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
         </RelativeLayout>
 
