--- a/app/src/main/res/layout/addstaydialog.xml
+++ b/app/src/main/res/layout/addstaydialog.xml
@@ -1,195 +1,269 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent" android:layout_height="match_parent" >
 
-    <TextView
-        android:id="@+id/AddDetails"
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:textSize="24dp"
-        android:textStyle="bold"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="22dp"
-        android:text="Add Stay Details" />
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center_horizontal">
 
-    <TextView
-        android:id="@+id/stayNameView"
-        android:layout_width="wrap_content"
-        android:layout_height="45dp"
-        android:text="Stay Name :"
-        android:layout_marginTop="80dp"
-        android:layout_marginLeft="25dp"
-        android:textSize="17dp" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-    <EditText
-        android:id="@+id/editStayName"
-        android:layout_width="220dp"
-        android:layout_height="45dp"
-        android:layout_marginTop="70dp"
-        android:layout_marginLeft="120dp"/>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/hostNameView"
-        android:layout_width="wrap_content"
-        android:layout_height="45dp"
-        android:text="Host Name :"
-        android:textSize="17dp"
-        android:layout_marginTop="130dp"
-        android:layout_marginLeft="25dp"/>
+                <TextView
+                    android:id="@+id/AddDetails"
+                    android:layout_width="wrap_content"
+                    android:layout_height="40dp"
+                    android:layout_alignParentTop="true"
+                    android:layout_centerHorizontal="true"
+                    android:layout_margin="10dp"
+                    android:text="Add Stay Details"
+                    android:textColor="@android:color/background_dark"
+                    android:textSize="24dp"
+                    android:textStyle="bold" />
 
-    <EditText
-        android:id="@+id/editHostName"
-        android:layout_width="220dp"
-        android:layout_height="45dp"
-        android:layout_marginTop="120dp"
-        android:layout_marginLeft="120dp"/>
+                <TextView
+                    android:id="@+id/stayNameView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="40dp"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginLeft="21dp"
+                    android:layout_marginTop="80dp"
+                    android:text="Stay Name :"
+                    android:textColor="@android:color/background_dark"
+                    android:textSize="17dp" />
 
-    <TextView
-        android:id="@+id/placeView"
-        android:layout_width="wrap_content"
-        android:layout_height="45dp"
-        android:text="Place :"
-        android:textSize="17dp"
-        android:layout_marginTop="180dp"
-        android:layout_marginLeft="60dp"/>
+                <EditText
+                    android:id="@+id/editStayName"
+                    android:layout_width="220dp"
+                    android:layout_height="40dp"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginLeft="140dp"
+                    android:layout_marginTop="80dp"
+                    android:inputType="textCapWords" />
 
-    <EditText
-        android:id="@+id/editPlace"
-        android:layout_width="220dp"
-        android:layout_height="45dp"
-        android:layout_marginTop="170dp"
-        android:layout_marginLeft="120dp"/>
+                <TextView
+                    android:id="@+id/hostNameView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="40dp"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginLeft="21dp"
+                    android:layout_marginTop="130dp"
+                    android:text="Host Name :"
+                    android:textColor="@android:color/background_dark"
+                    android:textSize="17dp" />
 
-    <TextView
-        android:id="@+id/dateView"
-        android:layout_width="wrap_content"
-        android:layout_height="30dp"
-        android:textSize="17dp"
-        android:text="Date :"
-        android:layout_marginTop="230dp"
-        android:layout_marginLeft="60dp"/>
+                <EditText
+                    android:id="@+id/editHostName"
+                    android:layout_width="220dp"
+                    android:layout_height="40dp"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginLeft="140dp"
+                    android:layout_marginTop="130dp"
+                    android:inputType="textCapWords" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="(dd-mm-yyyy)"
-        android:layout_marginTop="250dp"
-        android:layout_marginLeft="35dp"/>
+                <TextView
+                    android:id="@+id/placeView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="40dp"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginLeft="21dp"
+                    android:layout_marginTop="180dp"
+                    android:text="Place :"
+                    android:textColor="@android:color/background_dark"
+                    android:textSize="17dp" />
 
-    <TextView
-        android:id="@+id/editDate"
-        android:layout_width="150dp"
-        android:layout_height="45dp"
-        android:textSize="15dp"
-        android:layout_marginTop="225dp"
-        android:layout_marginLeft="180dp"/>
+                <EditText
+                    android:id="@+id/editPlace"
+                    android:layout_width="220dp"
+                    android:layout_height="40dp"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginLeft="140dp"
+                    android:layout_marginTop="180dp"
+                    android:inputType="textCapWords" />
 
-    <ImageButton
-        android:id="@+id/calendarImageButton"
-        android:layout_width="45dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="215dp"
-        android:layout_marginLeft="125dp"
-        app:srcCompat="@android:drawable/ic_menu_my_calendar" />
+                <TextView
+                    android:id="@+id/dateView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="40dp"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginLeft="21dp"
+                    android:layout_marginTop="230dp"
+                    android:text="Date :"
+                    android:textColor="@android:color/background_dark"
+                    android:textSize="17dp" />
 
-    <TextView
-        android:id="@+id/cityView"
-        android:layout_width="wrap_content"
-        android:layout_height="30dp"
-        android:text="City :"
-        android:textSize="17dp"
-        android:layout_marginTop="290dp"
-        android:layout_marginLeft="70dp"/>
+                <TextView
+                    android:id="@+id/editDate"
+                    android:layout_width="170dp"
+                    android:layout_height="40dp"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginLeft="190dp"
+                    android:layout_marginTop="230dp"
+                    android:textSize="15dp" />
 
-    <EditText
-        android:id="@+id/editCity"
-        android:layout_width="220dp"
-        android:layout_height="45dp"
-        android:layout_marginTop="275dp"
-        android:layout_marginLeft="110dp"/>
+                <ImageButton
+                    android:id="@+id/calendarImageButton"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginLeft="140dp"
+                    android:layout_marginTop="230dp"
+                    android:background="@color/colorAccent"
+                    app:srcCompat="@android:drawable/ic_menu_my_calendar" />
 
-    <TextView
-        android:id="@+id/phoneView"
-        android:layout_width="wrap_content"
-        android:layout_height="30dp"
-        android:textSize="17dp"
-        android:text="Phone No. :"
-        android:layout_marginTop="340dp"
-        android:layout_marginLeft="20dp"/>
+                <TextView
+                    android:id="@+id/cityView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="40dp"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginLeft="21dp"
+                    android:layout_marginTop="280dp"
+                    android:text="City :"
+                    android:textColor="@android:color/background_dark"
+                    android:textSize="17dp" />
 
-    <EditText
-        android:id="@+id/editPhone"
-        android:layout_width="220dp"
-        android:layout_height="45dp"
-        android:layout_marginTop="325dp"
-        android:layout_marginLeft="110dp"/>
+                <EditText
+                    android:id="@+id/editCity"
+                    android:layout_width="220dp"
+                    android:layout_height="40dp"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginLeft="140dp"
+                    android:layout_marginTop="280dp"
+                    android:inputType="textCapWords" />
 
-    <TextView
-        android:id="@+id/maxPeoplesView"
-        android:layout_width="wrap_content"
-        android:layout_height="30dp"
-        android:textSize="17dp"
-        android:text="Max. Peoples to Stay :"
-        android:layout_marginTop="390dp"
-        android:layout_marginLeft="20dp"/>
+                <TextView
+                    android:id="@+id/phoneView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="40dp"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginLeft="21dp"
+                    android:layout_marginTop="330dp"
+                    android:text="Phone No. :"
+                    android:textColor="@android:color/background_dark"
+                    android:textSize="17dp" />
 
-    <EditText
-        android:id="@+id/editMaxPeoples"
-        android:layout_width="50dp"
-        android:layout_height="45dp"
-        android:layout_marginTop="375dp"
-        android:layout_marginLeft="190dp"/>
+                <EditText
+                    android:id="@+id/editPhone"
+                    android:layout_width="220dp"
+                    android:layout_height="40dp"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginLeft="140dp"
+                    android:layout_marginTop="330dp"
+                    android:inputType="phone" />
 
-    <TextView
-        android:id="@+id/stayImageView"
-        android:layout_width="wrap_content"
-        android:layout_height="30dp"
-        android:text="Stay Image :"
-        android:textSize="17dp"
-        android:layout_marginLeft="40dp"
-        android:layout_marginTop="430dp"/>
+                <TextView
+                    android:id="@+id/maxPeoplesView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="40dp"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginLeft="21dp"
+                    android:layout_marginTop="380dp"
+                    android:text="Max. Peoples:"
+                    android:textColor="@android:color/background_dark"
+                    android:textSize="17dp" />
 
-    <Button
-        android:id="@+id/stayImageButton"
-        android:layout_width="wrap_content"
-        android:layout_height="30dp"
-        android:layout_marginLeft="150dp"
-        android:layout_marginTop="425dp"
-        android:textSize="10dp"
-        android:text="choose image"/>
+                <EditText
+                    android:id="@+id/editMaxPeoples"
+                    android:layout_width="220dp"
+                    android:layout_height="40dp"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginLeft="140dp"
+                    android:layout_marginTop="380dp"
+                    android:inputType="numberSigned" />
 
-    <TextView
-        android:id="@+id/detailsView"
-        android:layout_width="wrap_content"
-        android:layout_height="30dp"
-        android:textSize="17dp"
-        android:text="Details :"
-        android:layout_marginTop="475dp"
-        android:layout_marginLeft="70dp"/>
+                <TextView
+                    android:id="@+id/stayImageView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="40dp"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginLeft="21dp"
+                    android:layout_marginTop="430dp"
+                    android:text="Stay Image :"
+                    android:textColor="@android:color/background_dark"
+                    android:textSize="17dp" />
 
-    <EditText
-        android:id="@+id/editDetails"
-        android:layout_width="220dp"
-        android:layout_height="45dp"
-        android:layout_marginTop="460dp"
-        android:layout_marginLeft="135dp"/>
+                <Button
+                    android:id="@+id/stayImageButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="40dp"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginLeft="140dp"
+                    android:layout_marginTop="430dp"
+                    android:background="@color/colorAccent"
+                    android:text="choose image"
+                    android:textSize="10dp" />
 
-    <TextView
-        android:id="@+id/offersView"
-        android:layout_width="wrap_content"
-        android:layout_height="30dp"
-        android:textSize="17dp"
-        android:text="Things to Offer :"
-        android:layout_marginTop="520dp"
-        android:layout_marginLeft="12dp"/>
+                <TextView
+                    android:id="@+id/detailsView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="40dp"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginLeft="21dp"
+                    android:layout_marginTop="480dp"
+                    android:text="Details :"
+                    android:textColor="@android:color/background_dark"
+                    android:textSize="17dp" />
 
-    <EditText
-        android:id="@+id/editOffers"
-        android:layout_width="220dp"
-        android:layout_height="45dp"
-        android:layout_marginTop="510dp"
-        android:layout_marginLeft="135dp"/>
+                <EditText
+                    android:id="@+id/editDetails"
+                    android:layout_width="220dp"
+                    android:layout_height="40dp"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginLeft="140dp"
+                    android:layout_marginTop="480dp"
+                    android:inputType="textCapSentences" />
 
-</RelativeLayout>
+                <TextView
+                    android:id="@+id/offersView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="40dp"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginLeft="21dp"
+                    android:layout_marginTop="530dp"
+                    android:text="Things to Offer :"
+                    android:textColor="@android:color/background_dark"
+                    android:textSize="17dp" />
+
+                <EditText
+                    android:id="@+id/editOffers"
+                    android:layout_width="220dp"
+                    android:layout_height="40dp"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginLeft="140dp"
+                    android:layout_marginTop="530dp"
+                    android:inputType="textCapWords" />
+
+            </RelativeLayout>
+        </LinearLayout>
+    </ScrollView>
+
+</LinearLayout>
