--- a/app/src/main/res/layout/fragment_add_places.xml
+++ b/app/src/main/res/layout/fragment_add_places.xml
@@ -6,10 +6,24 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".AddStaysFragment">
 
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:background="@drawable/login_signup_gradient"
+        android:padding="20dp"
+        android:text="Hey Buddy, Add Stay Here!"
+        android:textColor="@android:color/background_light"
+        android:textSize="18sp"
+        android:textStyle="bold" />
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/add_stay_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_below="@+id/textView4"
+        android:layout_margin="10dp" />
 
     <TextView
         android:id="@+id/noUseTextView"
@@ -19,14 +33,15 @@
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/addStayButton"
-        android:layout_width="59dp"
-        android:layout_height="54dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
+        android:layout_margin="10dp"
         android:layout_marginEnd="60dp"
-        android:layout_marginRight="60dp"
-        android:layout_marginBottom="93dp"
-        android:src="@android:drawable/ic_input_add" />
+        android:baselineAlignBottom="true"
+        android:src="@android:drawable/ic_input_add"
+        app:backgroundTint="@color/colorBottomNavigationPrimary" />
 
 </RelativeLayout>
