--- a/app/src/main/res/layout/fragment_login_fragment.xml
+++ b/app/src/main/res/layout/fragment_login_fragment.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -98,9 +97,9 @@
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="400dp"
-                android:background="@color/colorPrimary"
+                android:background="@color/colorAccent"
                 android:text="Login"
-                android:textColor="@android:color/white" />
+                android:textColor="@color/colorPrimaryDark" />
 
             <Button
                 android:id="@+id/newUser_button"
