--- a/app/src/main/res/layout/request_list_item.xml
+++ b/app/src/main/res/layout/request_list_item.xml
@@ -10,51 +10,49 @@
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="5dp"
-        android:layout_marginTop="5dp">
+        android:layout_margin="10dp">
 
         <RelativeLayout
             android:id="@+id/layout"
             android:layout_width="match_parent"
-            android:layout_height="589dp"
-            android:layout_marginBottom="5dp"
-            android:layout_marginTop="5dp">
+            android:layout_height="wrap_content">
 
             <ImageView
                 android:id="@+id/requested_person_image"
-                android:layout_width="143dp"
-                android:layout_height="70dp"
+                android:layout_width="150dp"
+                android:layout_height="100dp"
+                android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
                 android:contentDescription="@string/todo"
-                android:scaleType="centerCrop"
-                android:layout_alignParentLeft="true" />
+                android:scaleType="fitStart"
+                app:srcCompat="@drawable/default_person_image" />
 
             <TextView
                 android:id="@+id/requested_person_username"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignBottom="@+id/requested_person_image"
                 android:layout_alignParentEnd="true"
-                android:layout_marginEnd="28dp"
+                android:layout_alignParentTop="true"
+                android:layout_marginRight="10dp"
+                android:layout_toLeftOf="@+id/requested_person_image"
                 android:shadowColor="@color/cardview_dark_background"
                 android:text="@string/name_of_the_stay"
                 android:textAllCaps="false"
-                android:textColor="@color/colorBottomNavigationAccent"
-                android:textSize="24sp"
-                android:textStyle="bold"
-                android:layout_alignParentRight="true"
-                android:layout_marginRight="28dp" />
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/request_date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_below="@+id/number_of_traveller"
-                android:layout_marginEnd="81dp"
+                android:layout_alignEnd="@+id/requested_person_username"
+                android:layout_alignParentTop="true"
+                android:layout_centerVertical="true"
+                android:layout_marginTop="30dp"
+                android:layout_toLeftOf="@+id/requested_person_image"
                 android:text="Dates Available"
-                android:layout_alignParentRight="true"
                 tools:ignore="RtlCompat" />
 
             <TextView
@@ -63,19 +61,24 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentTop="true"
-                android:layout_marginEnd="104dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="50dp"
+                android:layout_toLeftOf="@+id/requested_person_image"
                 android:text="No. Of Traveller"
-                android:layout_alignParentRight="true"
                 tools:ignore="RtlCompat" />
 
             <TextView
                 android:id="@+id/status"
-                android:layout_width="67dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
                 android:layout_alignParentTop="true"
-                android:text="Status" />
+                android:layout_below="@+id/requested_person_username"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="70dp"
+                android:layout_toLeftOf="@+id/requested_person_image"
+                android:text="Status"
+                android:textColor="@color/colorAccent" />
 
         </RelativeLayout>
     </android.support.v7.widget.CardView>
