--- a/app/src/main/res/layout/requested_stay_list_item.xml
+++ b/app/src/main/res/layout/requested_stay_list_item.xml
@@ -1,52 +1,86 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="?android:attr/selectableItemBackground"
-    android:clickable="true"
-    android:focusable="true"
-    android:orientation="vertical"
-    android:paddingBottom="10dp"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="10dp">
+    android:layout_margin="10dp">
 
-    <TextView
-        android:id="@+id/requested_stay_name"
-        android:layout_width="89dp"
-        android:layout_height="32dp"
-        android:layout_marginStart="94dp"
-        android:layout_marginTop="10dp"
-        android:textSize="16dp"
-        android:textStyle="bold"
-        tools:ignore="RtlCompat" />
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/requested_city"
-        android:layout_width="76dp"
-        android:layout_height="32dp"
-        android:layout_marginTop="10dp"
-        android:layout_alignStart="@+id/username"
-        android:layout_below="@+id/review_rating"
-        tools:ignore="RtlCompat" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@android:color/white"
+            android:clickable="true"
+            android:focusable="true">
 
-    <TextView
-        android:id="@+id/host_name"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignTop="@+id/username"
-        android:layout_marginEnd="11dp"
-        android:textColor="#999999"
-        tools:ignore="RtlCompat" />
+            <TextView
+                android:id="@+id/requested_stay_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignEnd="@+id/status"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentTop="true"
 
-    <TextView
-        android:id="@+id/status"
-        android:layout_width="76dp"
-        android:layout_height="32dp"
-        android:layout_marginLeft="200dp"
-        android:layout_marginTop="10dp"
-        android:text="TextView" />
+                android:layout_marginLeft="10dp"
+                android:text="Stay Name"
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="20sp"
+                android:textStyle="bold" />
 
-</RelativeLayout>
+            <TextView
+                android:id="@+id/requested_city"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="false"
+                android:layout_alignStart="@+id/username"
+                android:layout_below="@+id/requested_stay_name"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_toRightOf="@+id/host_name"
+                android:text="City"
+                android:textColor="@color/colorPrimary"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/host_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/requested_stay_name"
+                android:layout_centerVertical="false"
+                android:layout_marginLeft="10dp"
+                android:text="host "
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/status"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="false"
+                android:layout_alignParentEnd="true"
+                android:layout_below="@+id/textView6"
+                android:layout_marginRight="10dp"
+                android:text="Status"
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/textView6"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginRight="10dp"
+                android:text="Status"
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="20sp" />
+
+        </RelativeLayout>
+    </android.support.v7.widget.CardView>
+
+</LinearLayout>
