--- a/app/src/main/res/layout/stay_list_item.xml
+++ b/app/src/main/res/layout/stay_list_item.xml
@@ -31,21 +31,21 @@
                 style="@android:style/Widget.DeviceDefault.Light.ImageButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignWithParentIfMissing="false"
                 android:layout_alignBottom="@+id/imageView"
-                android:layout_alignParentStart="false"
-                android:layout_alignParentLeft="false"
-                android:layout_alignParentTop="false"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="false"
-                android:layout_marginStart="5dp"
-                android:layout_marginLeft="5dp"
-                android:layout_marginTop="5dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginRight="8dp"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentLeft="false"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentStart="false"
+                android:layout_alignParentTop="false"
+                android:layout_alignWithParentIfMissing="false"
                 android:layout_marginBottom="-43dp"
-                android:background="@android:drawable/menuitem_background"
+                android:layout_marginEnd="8dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginStart="5dp"
+                android:layout_marginTop="5dp"
+                android:background="@android:drawable/sym_action_call"
                 android:contentDescription="@string/todo"
                 app:srcCompat="@android:drawable/ic_menu_call" />
 
@@ -55,9 +55,9 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/textView_stay"
                 android:text="@string/name_of_the_host"
-                android:textStyle="bold"
-                android:textColor="@color/colorBottomNavigationNotification"
-                android:textSize="18sp" />
+                android:textColor="@color/cardview_dark_background"
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/textView_stay"
@@ -66,10 +66,11 @@
                 android:layout_alignBottom="@+id/imageView"
                 android:layout_marginBottom="5dp"
                 android:layout_marginTop="5dp"
-                android:shadowColor="@color/cardview_dark_background"
+                android:shadowColor="#424242"
                 android:text="@string/name_of_the_stay"
                 android:textAllCaps="false"
-                android:textColor="@color/colorBottomNavigationAccent"
+                android:textColor="@color/cardview_light_background"
+                android:textColorHighlight="@color/colorAccent"
                 android:textSize="24sp"
                 android:textStyle="bold" />
 
@@ -92,7 +93,7 @@
                 android:layout_marginTop="5dp"
                 android:layout_toLeftOf="@+id/ratingBar"
                 android:layout_toStartOf="@+id/ratingBar"
-                android:text="@string/_4_5"
+                android:text="4.5"
                 android:textColor="@color/colorBottomNavigationActiveColored"
                 android:textSize="24sp" />
 
